[gd_scene load_steps=18 format=3 uid="uid://dru6wp1xq8ngq"]

[ext_resource type="Script" path="res://ui/views/editor/viewport/viewport.gd" id="1_mdwbn"]
[ext_resource type="Script" path="res://ui/views/editor/viewport/components/camera.gd" id="2_it4fl"]
[ext_resource type="Texture2D" uid="uid://de2387csdhf47" path="res://ui/views/editor/viewport/components/t_panorama_sky.png" id="2_p0kfs"]
[ext_resource type="Script" path="res://ui/views/editor/viewport/gizmos/gizmos_manager.gd" id="4_6uoat"]
[ext_resource type="Script" path="res://ui/views/editor/viewport/components/viewport_tree.gd" id="5_04xjp"]
[ext_resource type="Texture2D" uid="uid://dnt2hnxoc8map" path="res://ui/icons/icon_question_mark.svg" id="5_xtp6v"]
[ext_resource type="Texture2D" uid="uid://cislafpj4011d" path="res://ui/icons/icon_camera.svg" id="6_6dlau"]
[ext_resource type="Texture2D" uid="uid://baxirbcpddsfe" path="res://ui/icons/spinning_wheel/icon_spinning_wheel.tres" id="6_40kvp"]
[ext_resource type="Texture2D" uid="uid://bjirb8q6awvj3" path="res://ui/icons/icon_window.svg" id="6_ddiw8"]
[ext_resource type="Script" path="res://ui/common/float_button.gd" id="7_vwp7d"]
[ext_resource type="Script" path="res://ui/common/auto_scale.gd" id="10_erxuh"]
[ext_resource type="Texture2D" uid="uid://buqj5g4horaq7" path="res://ui/icons/icon_shading.svg" id="11_j5o1g"]
[ext_resource type="PackedScene" uid="uid://m3ywyra7arof" path="res://ui/views/editor/viewport/components/shading_panel/shading_panel.tscn" id="13_le6vp"]

[sub_resource type="World3D" id="World3D_wutdu"]
resource_local_to_scene = true

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ymbai"]
panorama = ExtResource("2_p0kfs")

[sub_resource type="Sky" id="Sky_rbhip"]
sky_material = SubResource("PanoramaSkyMaterial_ymbai")
process_mode = 3

[sub_resource type="Environment" id="Environment_s5dt0"]
background_mode = 2
sky = SubResource("Sky_rbhip")

[node name="Viewport" type="MarginContainer"]
clip_children = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_mdwbn")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
world_3d = SubResource("World3D_wutdu")
handle_input_locally = false
msaa_3d = 2
use_debanding = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_s5dt0")

[node name="StaticLight" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.887815, 0.4602, 0, -0.4602, 0.887815, 2.09483, 1.84067, 2.86769)
shadow_enabled = true

[node name="ViewportCamera" type="Node3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("2_it4fl")

[node name="CameraLight" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/ViewportCamera"]
unique_name_in_owner = true
visible = false
shadow_enabled = true

[node name="GizmosManager" type="Node3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("4_6uoat")

[node name="InputRoot" type="Marker3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="OutputRoot" type="Marker3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="PreviewRoot" type="Marker3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = 175

[node name="Tree" type="Tree" parent="MarginContainer/HSplitContainer" node_paths=PackedStringArray("input", "output", "preview")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"TreeDark"
script = ExtResource("5_04xjp")
input = NodePath("../../../SubViewportContainer/SubViewport/InputRoot")
output = NodePath("../../../SubViewportContainer/SubViewport/OutputRoot")
preview = NodePath("../../../SubViewportContainer/SubViewport/PreviewRoot")

[node name="DefaultTreeInfo" type="MarginContainer" parent="MarginContainer/HSplitContainer/Tree"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/Tree/DefaultTreeInfo"]
layout_mode = 2
alignment = 1

[node name="LabelTitle" type="Label" parent="MarginContainer/HSplitContainer/Tree/DefaultTreeInfo/VBoxContainer"]
layout_mode = 2
text = "Scene tree"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInfo" type="Label" parent="MarginContainer/HSplitContainer/Tree/DefaultTreeInfo/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelMinor"
text = "Add objects to the scene tree to display them here and in the 3D viewport."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/HBoxContainer"]
layout_mode = 2

[node name="HelpPanel" type="PanelContainer" parent="MarginContainer/HSplitContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"PanelContainerTransparent"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/HBoxContainer/VBoxContainer/HelpPanel"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HSplitContainer/HBoxContainer/VBoxContainer/HelpPanel/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
bbcode_enabled = true
text = "[b]Orbit[/b]:[color=gray] Middle Click[/color]
[b]Pan[/b]:[color=gray] Shift + Middle Click[/color]
[b]Zoom[/b]:[color=gray] Scroll Up / Down[/color]"
fit_content = true
autowrap_mode = 0

[node name="AutoScale" type="Node" parent="MarginContainer/HSplitContainer/HBoxContainer/VBoxContainer/HelpPanel/MarginContainer/RichTextLabel"]
script = ExtResource("10_erxuh")

[node name="ShadingPanel" parent="MarginContainer/HSplitContainer/HBoxContainer/VBoxContainer" instance=ExtResource("13_le6vp")]
unique_name_in_owner = true
layout_mode = 2

[node name="Toolbox" type="PanelContainer" parent="MarginContainer/HSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"PanelContainerTransparent"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/HBoxContainer/Toolbox"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/HBoxContainer/Toolbox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ToggleFloatButton" type="Button" parent="MarginContainer/HSplitContainer/HBoxContainer/Toolbox/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Toggle external window"
icon = ExtResource("6_ddiw8")
icon_alignment = 1
expand_icon = true
script = ExtResource("7_vwp7d")
subwindow_id = "viewport"

[node name="HelpButton" type="Button" parent="MarginContainer/HSplitContainer/HBoxContainer/Toolbox/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Display help"
toggle_mode = true
icon = ExtResource("5_xtp6v")
expand_icon = true

[node name="ShadingButton" type="Button" parent="MarginContainer/HSplitContainer/HBoxContainer/Toolbox/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Reset camera view"
toggle_mode = true
text = "
"
icon = ExtResource("11_j5o1g")
expand_icon = true

[node name="ResetCameraButton" type="Button" parent="MarginContainer/HSplitContainer/HBoxContainer/Toolbox/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Reset camera view"
text = "
"
icon = ExtResource("6_6dlau")
expand_icon = true

[node name="AutoScale" type="Node" parent="MarginContainer/HSplitContainer/HBoxContainer/Toolbox/MarginContainer/HBoxContainer"]
script = ExtResource("10_erxuh")
targets = 1

[node name="RebuildingPanel" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"PanelContainerTransparent"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/RebuildingPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/RebuildingPanel/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/RebuildingPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("6_40kvp")
expand_mode = 5

[node name="Label" type="Label" parent="MarginContainer/RebuildingPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rebuilding"
vertical_alignment = 1
